[gd_scene load_steps=4 format=3 uid="uid://bm8n5d2cvqpxg"]

[ext_resource type="Script" path="res://message_modal.gd" id="1_messagescript"]
[ext_resource type="Theme" uid="uid://c7o6yhcjomh2l" path="res://themes/header_text_theme.tres" id="2_headertheme"]
[ext_resource type="Theme" uid="uid://by7qgvqcnwbyx" path="res://themes/standard_text_theme.tres" id="3_standardtheme"]

[node name="MessageModal" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
z_index = 100
script = ExtResource("1_messagescript")

[node name="ContentContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme = ExtResource("2_headertheme")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Header"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="MessageLabel" type="Label" parent="ContentContainer"]
layout_mode = 2
theme = ExtResource("3_standardtheme")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Message text goes here."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ContinueButton" type="Button" parent="ContentContainer"]
layout_mode = 2
custom_minimum_size = Vector2(160, 40)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Continue"